Fix broken image paths for deployment

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <header id="header">
         <nav class="navbar">
             <div class="logo-container" style="display: flex; align-items: center; gap: 10px;">
-                <img src="C:\Users\bharg\OneDrive\Desktop\anti_gravity_portfolio\bhargav_[ic.jpeg" alt="Bhargav"
-                    class="nav-profile-img">
+                <img src="bhargav_[ic.jpeg" alt="Bhargav" class="nav-profile-img">
                 <div class="logo">Bhargav Chowdary</div>
             </div>
             <ul class="nav-links">
@@ -51,8 +50,7 @@
                 <div class="hero-image">
                     <div class="tech-profile-wrapper">
                         <div class="star-orbit"></div>
-                        <img src="C:\Users\bharg\OneDrive\Desktop\anti_gravity_portfolio\bhargav_[ic.jpeg"
-                            alt="Bhargav Chowdary">
+                        <img src="bhargav_[ic.jpeg" alt="Bhargav Chowdary">
                     </div>
                 </div>
                 <div class="hero-content">
