updated profile pic

--- a/index.html
+++ b/index.html
@@ -353,6 +353,12 @@
         <p>&copy; 2025 Bhargav Chowdary. All rights reserved.</p>
     </footer>
 
+    <!-- Mobile Profile Modal -->
+    <div id="profile-modal" class="modal-overlay">
+        <span class="close-modal">&times;</span>
+        <img src="bhargav_[ic.jpeg" class="modal-content" id="full-profile-img" alt="Full Profile">
+    </div>
+
     <script src="script.js"></script>
 </body>
 
